--- a/index.html
+++ b/index.html
@@ -44,27 +44,30 @@
         <!-- Add your resume content here -->
         <h3>Yunlong Li</h3>
         <p>Email: mikamijpen@mail.dlut.edu.cn</p>
-        <img src="resume.jpg" alt="Resume Image">
+        <img src="resume.jpg" alt="Resume Image" width="200" height="200">
         <p><i>“just for fun and a colorful leaving.”</i></p>
         <br>
         <h3> education</h3>
         <div style="white-space: pre;">
-    I'm born in HeFei, China, 2003. Graduated from the Hefei No.1 High School,
-who cultivated my desire for exploration.
-    Now I am a junior(2024) in the Department of Computer Science, Dalian University of Technology,
-who taught me the approach to exploration.
+    I was born in Hefei, China, 2003. Graduated from the Hefei No.1 High School.
+    Now I am a junior(2024) in the Department of Computer Science, Dalian University of Technology.
     In the near future, I'll embark on real journey of exploration.</div>
         <br>
-
-        <h3> habit</h3>
+        <h3>research interests</h3>
         <div style="white-space: pre;">
-I'm a big fan of
-    jogging
+    I'm interested in the fields of
+            VLM or imitation learning based robot motion planning
+            Model Compression </div>
+       <br>
+            <h3> habit</h3>
+        <div style="white-space: pre;">
+    I'm a big fan of
+        jogging
 
-    climbing
+        climbing
     <img src="climb.jpg" alt="Resume Image" width="500" height="300">
 
-    communication
+        communication
     <img src="com.jpg" alt="Resume Image" width="500" height="300">
 
         </div>
@@ -77,13 +80,25 @@ I'm a big fan of
             <a href="https://www.yuque.com/sanshangjingjie/hr708c" target="_blank">
                 repository</a>,
             and some of what I'd like to explore most are as follows:</p>
-        <p><a href="https://www.runoob.com"target="_blank">
+        <p><a href="https://www.yuque.com/sanshangjingjie/hr708c/iocvyg611mpafdw8 "target="_blank">
             theory prospects</a></p>
+        <p><a href="https://www.yuque.com/sanshangjingjie/hr708c/accdxa6zv4ry4yee "target="_blank">
+            prompt->agents</a></p>
+        <p><a href="https://www.yuque.com/sanshangjingjie/hr708c/ghxxhzg3quav7y5l  "target="_blank">
+            VLA</a></p>
+        <p><a href="https://www.yuque.com/sanshangjingjie/hr708c/niwhvpd6cua9izp7   "target="_blank">
+            compress</a></p>
+
     </section>
     <section id="project">
         <h2>Project</h2>
         <!-- Add your project content here -->
-        <p>This is where you can put your project content.</p>
+        <p><a href="https://www.bilibili.com/video/BV1EJ4m1W7Ts/?pop_share=1&vd_source=2097f5ba3deee6f0c277bf69f7c12eca" target="_blank">
+                演示：基于vits的微调+character.ai的api调用</a>
+        <a href="https://github.com/mikamijpen/basedvits/tree/main"target="_blank">
+            code</a>
+        <a href="https://www.yuque.com/sanshangjingjie/hr708c/wu5gqdck5wl1unw5 "target="_blank">
+            report</a></p>
     </section>
     <section id="presentation">
         <h2>Presentation</h2>
