--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             VLM or imitation learning based robot motion planning
             Model Compression </div>
        <br>
-            <h3> habit</h3>
+            <h3>hobby</h3>
         <div style="white-space: pre;">
     I'm a big fan of
         jogging
