--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h3>Yunlong Li</h3>
         <p>Email: mikamijpen@mail.dlut.edu.cn</p>
         <img src="resume.jpg" alt="Resume Image" width="200" height="200">
-        <p><i>“just for fun and a colorful leaving.”</i></p>
+        <p><i>“just for fun and colorful vitality.”</i></p>
         <br>
         <h3> education</h3>
         <div style="white-space: pre;">
