--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <!-- Add your presentation content here -->
         <p>
             [TGRS2024]Text-Guided Diverse Image Synthesis for
-Long-Tailed Remote Sensing Object Recognition(major revision)</p>
+Long-Tailed Remote Sensing Object Classification(major revision)</p>
         <img src="TGN.jpg" alt="Resume Image">
     </section>
 
