--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
     </style>
 </head>
-<body onload="showPage('resume')">
+<body onload="showPage('resume')" style="line-height: 1.8">
     <nav>
         <a href="#" onclick="showPage('resume')">Resume</a>
         <a href="#" onclick="showPage('manuscript')">Manuscript</a>
@@ -55,9 +55,9 @@
         <br>
         <h3>research interests</h3>
         <div style="white-space: pre;">
-    I'm interested in the fields of
+    My interests lie in the fields of
             VLM or imitation learning based robot motion planning
-            Model Compression </div>
+            else about intersection of Robotics and CV </div>
        <br>
             <h3>hobby</h3>
         <div style="white-space: pre;">
@@ -86,8 +86,7 @@
             prompt->agents</a></p>
         <p><a href="https://www.yuque.com/sanshangjingjie/hr708c/ghxxhzg3quav7y5l  "target="_blank">
             VLA</a></p>
-        <p><a href="https://www.yuque.com/sanshangjingjie/hr708c/niwhvpd6cua9izp7   "target="_blank">
-            compress</a></p>
+       
 
     </section>
     <section id="project">
