--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div style="white-space: pre;">
     My interests lie in the fields of
             VLM or imitation learning based robot motion planning
-            else about intersection of Robotics and CV </div>
+            else about intersection of Robotics Control and CV </div>
        <br>
             <h3>hobby</h3>
         <div style="white-space: pre;">
