--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
         <!-- Add your presentation content here -->
         <p>
             [TGRS2024]Text-Guided Diverse Image Synthesis for
-Long-Tailed Remote Sensing Object Classification(major revision)</p>
+Long-Tailed Remote Sensing Object Classification(<a href="https://www.yuque.com/sanshangjingjie/hr708c/gkdxpbfyxx1v7qsn" target="_blank">
+            major revision</a>)</p>
         <img src="TGN.jpg" alt="Resume Image">
     </section>
 
