--- a/index.html
+++ b/index.html
@@ -49,15 +49,21 @@
         <br>
         <h3> education</h3>
         <div style="white-space: pre;">
-    I was born in Hefei, China, 2003. Graduated from the Hefei No.1 High School.
+    I was born in Hefei, China, 2003.
     Now I am a junior(2024) in the Department of Computer Science, Dalian University of Technology.
     In the near future, I'll embark on real journey of exploration.</div>
         <br>
         <h3>research interests</h3>
         <div style="white-space: pre;">
     My interests lie in the fields of
-            VLM or imitation learning based robot motion planning
-            else about intersection of Robotics Control and CV </div>
+            robot motion planning via
+                VLM end-to-end modeling and training
+                Imitation Learning
+                Offline Policy Learning with Continuous Learning
+                Policy Learning with Algorithm Distillation
+            else about intersection of Robotics Control and CV
+
+    I am willing to contribute to the development of intelligent robots.</div>
        <br>
             <h3>hobby</h3>
         <div style="white-space: pre;">
@@ -76,17 +82,16 @@
         <h2>Manuscript</h2>
         <!-- Add your manuscript content here -->
 
-        <p>You can see all of my ML notes in the
+        <p>You can see all of my ML notes in this
             <a href="https://www.yuque.com/sanshangjingjie/hr708c" target="_blank">
-                repository</a>,
-            and some of what I'd like to explore most are as follows:</p>
+                repository</a>. Some of what I'd like to explore most are as follows:</p>
         <p><a href="https://www.yuque.com/sanshangjingjie/hr708c/iocvyg611mpafdw8 "target="_blank">
             theory prospects</a></p>
         <p><a href="https://www.yuque.com/sanshangjingjie/hr708c/accdxa6zv4ry4yee "target="_blank">
             prompt->agents</a></p>
-        <p><a href="https://www.yuque.com/sanshangjingjie/hr708c/ghxxhzg3quav7y5l  "target="_blank">
-            VLA</a></p>
-       
+        <p><a href="https://www.yuque.com/sanshangjingjie/hr708c/hh9s3yoru7bvur1a "target="_blank">
+            robotics control</a></p>
+
 
     </section>
     <section id="project">
