--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
                 Imitation Learning
                 Offline Policy Learning with Continuous Learning
                 Policy Learning with Algorithm Distillation
-            else about intersection of Robotics Control and CV
-
-    I am willing to contribute to the development of intelligent robots.</div>
+            else about intersection of Robotics Control and CV</div>
        <br>
             <h3>hobby</h3>
         <div style="white-space: pre;">
