--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h2>Project</h2>
         <!-- Add your project content here -->
         <p><a href="https://www.bilibili.com/video/BV1EJ4m1W7Ts/?pop_share=1&vd_source=2097f5ba3deee6f0c277bf69f7c12eca" target="_blank">
-                演示：基于vits的微调+character.ai的api调用</a>
+            Demo: </a>dialog system via VITS-based fine-tuning +character.ai api call
         <a href="https://github.com/mikamijpen/basedvits/tree/main"target="_blank">
             code</a>
         <a href="https://www.yuque.com/sanshangjingjie/hr708c/wu5gqdck5wl1unw5 "target="_blank">
