--- a/index.html
+++ b/index.html
@@ -55,13 +55,10 @@
         <br>
         <h3>research interests</h3>
         <div style="white-space: pre;">
-    My interests lie in the fields of
-            robot motion planning via
-                VLM end-to-end modeling and training
-                Imitation Learning
-                Offline Policy Learning with Continuous Learning
-                Policy Learning with Algorithm Distillation
-            else about intersection of Robotics Control and CV</div>
+    My interests lie in the intersection of Robotics Control and CV. Specially,
+            Robot-specific control code generation by multimodal models
+            Failure detection and handling
+            Policy learning with distillation or imitation</div>
        <br>
             <h3>hobby</h3>
         <div style="white-space: pre;">
