--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     My interests lie in the intersection of Robotics Control and CV. Specially,
             Robot-specific control code generation by multimodal models
             Failure detection and handling
-            Policy learning with distillation or imitation</div>
+            Policy learning with distillation or imitation
+            anything else related</div>
        <br>
             <h3>hobby</h3>
         <div style="white-space: pre;">
