--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
         <br>
         <h3>research interests</h3>
         <div style="white-space: pre;">
-    My interests lie in the intersection of Robotics Control and CV. Specially,
+    My interests lie in the fields of
+        intersection of Robotic Control and CV. For example,
             Robot-specific control code generation by multimodal models
             Failure detection and handling
-            Policy learning with distillation or imitation
-            anything else related</div>
+            Policy learning with distillation or imitation.
+        model compression for acceleration and localization. (for autonomous robots)
+        </div>
        <br>
             <h3>hobby</h3>
         <div style="white-space: pre;">
@@ -86,8 +88,9 @@
         <p><a href="https://www.yuque.com/sanshangjingjie/hr708c/accdxa6zv4ry4yee "target="_blank">
             prompt->agents</a></p>
         <p><a href="https://www.yuque.com/sanshangjingjie/hr708c/hh9s3yoru7bvur1a "target="_blank">
-            robotics control</a></p>
-
+            robotic control</a></p>
+        <p><a href="https://www.yuque.com/sanshangjingjie/hr708c/niwhvpd6cua9izp7 "target="_blank">
+            compress</a></p>
 
     </section>
     <section id="project">
