--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div style="white-space: pre;">
     I was born in Hefei, China, 2003.
     Now I am a junior(2024) in the Department of Computer Science, Dalian University of Technology.
-    In the near future, I'll embark on real journey of exploration.</div>
+    In the near future, I'll embark on a journey of exploration.</div>
         <br>
         <h3>research interests</h3>
         <div style="white-space: pre;">
