--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             Robot-specific control code generation by multimodal models
             Failure detection and handling
             Policy learning with distillation or imitation.
-        model compression for acceleration and localization. (for autonomous robots)
+        model compression for acceleration and localization. 
         </div>
        <br>
             <h3>hobby</h3>
