--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         <h3>research interests</h3>
         <div style="white-space: pre;">
     My interests lie in the fields of
-        intersection of planning and LLM. For example,
+        intersection of Robotic Control and CV. For example,
             Robot-specific control code generation by multimodal models
             Failure detection and handling
-            Plan learning with distillation or imitation.
+            Policy learning with distillation or imitation.
         model compression for acceleration and localization. 
         </div>
        <br>
