--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
         <div style="white-space: pre;">
     My interests lie in the fields of
         intersection of Robotic Control and CV. For example,
-            Robot-specific control code generation by multimodal models
+            Robot-specific control plan generation by multimodal models
             Failure detection and handling
-            Policy learning with distillation or imitation.
+            Policy learning with distillation or imitation,
+        plan by LLM agent(system 2),
         model compression for acceleration and localization. 
         </div>
        <br>
