--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         intersection of Robotic Control and CV. For example,
             Robot-specific control plan generation by multimodal models
             Failure detection and handling
-            Policy learning with distillation or imitation,
-        plan by LLM agent(system 2),
+            Policy learning with distillation or imitation.
+        plan by LLM agent(system 2).
         model compression for acceleration and localization. 
         </div>
        <br>
