--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <img src="resume.jpg" alt="Resume Image" width="200" height="200">
         <p><i>“Done is better than perfect.”</i></p>
         <p><i>“Know what you actually want to do and know what you are capable of.”</i></p>
+        <p><i>“Out of clutter find simplicity.”</i></p>
         <br>
         <h3> education</h3>
         <div style="white-space: pre;">
