--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h3>hobby</h3>
         <div style="white-space: pre;">
     I'm a big fan of
-        jogging
+        yoga
 
         climbing
     <img src="climb.jpg" alt="Resume Image" width="500" height="300">
