--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
         intersection of Robotic Control and CV. For example,
             Robot-specific control plan generation by multimodal models
             Failure detection and handling
-        plan by LLM agent(system 2).
-        model compression for acceleration and localization. 
+        plan by/cooperation between MLLM agents(system 2).
         </div>
        <br>
             <h3>hobby</h3>
