--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <div style="white-space: pre;">
     My interests lie in the fields of
         intersection of Robotic Control and CV. For example,
-            Robot-specific control plan generation by multimodal models
-            Failure detection and handling
-        plan by/cooperation between MLLM agents(system 2).
+            proactive perception with multimodal models
+            Robot-specific failure detection and handling
+        plan by/cooperation between MLLM agents by system 2.
         </div>
        <br>
             <h3>hobby</h3>
