--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     My interests lie in the fields of
         intersection of Robotic Control and CV. For example,
             proactive perception with multimodal models
-            Robot-specific failure detection and handling
+            failure detection and handling
+        novel structure of MLLM,
         plan by/cooperation between MLLM agents by system 2.
         </div>
        <br>
