--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         <p><i>“Done is better than perfect.”</i></p>
         <p><i>“Know what you actually want to do and know what you are capable of.”</i></p>
         <p><i>“Out of clutter find simplicity.”</i></p>
+        <p><i>“Die Frage, ob dem menschlichen Denken gegenständliche Wahrheit zukomme — 
+        ist keine Frage der Theorie, sondern eine praktische Frage.”</i></p>
         <br>
         <h3> education</h3>
         <div style="white-space: pre;">
