--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 
         communication
     <img src="com.jpg" alt="Resume Image" width="500" height="300">
+    <img src="together.jpg" alt="Resume Image" width="500" height="300">
+            
 
         </div>
     </section>
