--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <p>
             [TGRS2024]Text-Guided Diverse Image Synthesis for
 Long-Tailed Remote Sensing Object Classification(<a href="https://www.yuque.com/sanshangjingjie/hr708c/gkdxpbfyxx1v7qsn" target="_blank">
-            minor revisions</a>)</p>
+            accepted</a>)</p>
         <img src="TGN.jpg" alt="Resume Image">
     </section>
 
