--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
         <p><a href="https://www.yuque.com/sanshangjingjie/hr708c/niwhvpd6cua9izp7 "target="_blank">
             compress</a></p>
 
+        <p>In succession, I will officially share some of my studies in <a href="https://www.zhihu.com/people/33-24-96-52/posts "target="_blank">
+            zhihu</a>.</p>
+
     </section>
     <section id="project">
         <h2>Project</h2>
