--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
         <br>
         <h3> education</h3>
         <div style="white-space: pre;">
-    I was born in Hefei, China, 2003.
-    Now I am a junior(2024) in the Department of Computer Science, Dalian University of Technology.
+    Now I am a senior(2025) in the Department of Computer Science, Dalian University of Technology.
     In the near future, I'll embark on a journey of exploration onward.</div>
         <br>
         <h3>research interests</h3>
@@ -61,7 +60,7 @@
         intersection of Robotic Control and CV. For example,
             proactive perception with multimodal models
             failure detection and handling
-        plan by/cooperation between MLLM agents by system 2.
+        plan by/RL with MLLM agents.
         </div>
        <br>
             <h3>hobby</h3>
