--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         intersection of Robotic Control and CV. For example,
             proactive perception with multimodal models
             failure detection and handling
-        plan by/RL with MLLM agents.
+        AI infra ( Lustre ).
         </div>
        <br>
             <h3>hobby</h3>
