--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
         <h3>research interests</h3>
         <div style="white-space: pre;">
     My interests lie in the fields of
-        intersection of Robotic Control and CV. For example,
+        Intersection of Robotic Control and CV. For example,
             proactive perception with multimodal models
             failure detection and handling
+        Quantification and application of LLM
         AI infra ( Lustre ).
         </div>
        <br>
