--- a/index.html
+++ b/index.html
@@ -64,6 +64,26 @@
         AI infra ( Lustre ).
         </div>
        <br>
+
+
+        <!-- 在 HTML 中引入库 -->
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
+/>
+<script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
+
+<!-- 添加容器 -->
+<div class="calendar"></div>
+
+<!-- 初始化 -->
+<script>
+  GitHubCalendar(".calendar", "mikamijpen", {
+    responsive: true,
+    tooltips: true
+  });
+</script>
+        
             <h3>hobby</h3>
         <div style="white-space: pre;">
     I'm a big fan of
